--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-2</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
+    <script src="https://kit.fontawesome.com/28cfe9a69d.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
-        
-
-    </header>
+<body class="inter-normal">
+    <div class="header inter-normal">
+        <header>
+            <nav class="nav-bar">
+                <h1 class="nav-title">
+                    Fitness
+                </h1>
+                <ul class="nav-links ">
+                    <li class="nav-items"><a href="" class="nav-link nav-link-home">Home</a></li>
+                    <li class="nav-items"><a href="" class="nav-link">Service</a></li>
+                    <li class="nav-items"><a href="" class="nav-link">Contact</a></li>
+                    <li class="nav-items"><a href="" class="nav-link">About</a></li>
+                </ul>
+                <div class="hambar"><i class="fa-solid fa-bars"></i></div>
+            </nav>
+            <div class="banner">
+                <div class="banner-container">
+                    <div class="banner-intro">
+                        <h1 class="banner-intro-title">Get body in <br> <span id="banner-stylish-1">shape</span><span id="banner-stylish-2"> & stay <br> </span><span id="banner-stylish-3">healthy</span></h1>
+                        <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                        <div class="banner-button-container">
+                            <button class="banner-button-1">Join Club Now!</button>
+                            <button class="banner-button-2">Download App</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-image-container">
+                    <img class="banner-image" src="./images/Images 2.png" alt="">
+                </div>
+            </div>
+    
+        </header>
+    </div>
     <main>
 
     </main>
