nav and banner done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
                     </div>
                 </div>
                 <div class="banner-image-container">
-                    <img class="banner-image" src="./images/Images 2.png" alt="">
+                    <img class="banner-image" src="./images/Images 2.png" alt=""> 
+                    <div class="banner-sticker-1">
+                        <div class="banner-sticker-circle">
+                        </div>
+                        <div class="banner-sticker-description-1">
+                            <h3 class="banner-sticker-description-title-1">350+</h3>
+                            <p class="banner-sticker-description--description-1">Video Tutorial</p>
+                        </div>
+                        <div class="banner-sticker-2">
+                            <div class="banner-sticker-description">
+                                <h3 class="banner-sticker-description-title-2">500+</h3>
+                                <p class="banner-sticker-description--description-2">Free Workout Videos</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
     
