--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/28cfe9a69d.js" crossorigin="anonymous"></script>
 </head>
 <body class="inter-normal">
-    <div class="header inter-normal">
+    <div class="header">
         <header>
             <nav class="nav-bar">
                 <h1 class="nav-title">
