--- a/index.html
+++ b/index.html
@@ -56,6 +56,34 @@
         </header>
     </div>
     <main>
+        <section class="habit">
+            <h1 class="habit-title">Change Your Habits</h1>
+            <p class="habit-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="card-container">
+                <div class="card-1">
+                    <img class="card-image" src="./images/image 3.png" alt="">
+                    <h3>Movement</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card-2">
+                    <img class="card-image" src="./images/image 2.png" alt="">
+                    <h3>Time</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card-3">
+                    <img class="card-image" src="./images/image 4.png" alt="">
+                    <h3>Practice</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card-4">
+                    <img class="card-image" src="./images/image 5.png" alt="">
+                    <h3>Weight Loss</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+
+            
+        </section>
 
     </main>
     <footer>
