redefined some classes

--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
             <div class="card-container">
                 <div class="card-1">
                     <img class="card-image" src="./images/image 3.png" alt="">
-                    <h3>Movement</h3>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <h3 class="card-container-title">Movement</h3>
+                    <p class="card-container-description">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card-2">
                     <img class="card-image" src="./images/image 2.png" alt="">
-                    <h3>Time</h3>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <h3 class="card-container-title">Time</h3>
+                    <p class="card-container-description">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card-3">
                     <img class="card-image" src="./images/image 4.png" alt="">
-                    <h3>Practice</h3>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <h3 class="card-container-title">Practice</h3>
+                    <p class="card-container-description">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card-4">
                     <img class="card-image" src="./images/image 5.png" alt="">
-                    <h3>Weight Loss</h3>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <h3 class="card-container-title">Weight Loss</h3>
+                    <p class="card-container-description">We believe fitness should be accessible to everyone</p>
                 </div>
             </div>
 
