run section completed

--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
 
             
         </section>
+        <section class="run">
+            <div class="run-info">
+                <h3 class="run-title">Run an Extra 
+                    Mile Easily</h3>
+                <p class="run-description">
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+                </p>
+                <button class="run-btn">Join Now</button>
+                
+
+            </div>
+            <div class="run-image-card">
+                <img class="run-image" src="./images/run.jpg" alt="">
+
+            </div>
+
+        </section>
+
 
     </main>
     <footer>
