all section completed without unique section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <img class="banner-image" src="./images/Images 2.png" alt=""> 
                     <div class="banner-sticker-1">
                         <div class="banner-sticker-circle">
+                            <i class="fa-solid fa-play"></i>
                         </div>
                         <div class="banner-sticker-description-1">
                             <h3 class="banner-sticker-description-title-1">350+</h3>
